@startuml
'https://plantuml.com/sequence-diagram

abstract class GradeEvaluator{
    #GradeEvaluator nextEvaluator
    + GradeEvaluator setNextEvaluator(GradeEvaluator nextEvaluator)
    +{abstract} void evaluate(double score)
}
class StandardGradeEvaluator{
    -String gradeNew
    -double minScore
    -double maxScore
    -boolean isMaxInclusive
    +StandardGradeEvaluator (String gradeName, double minScore,double maxScore,boolean isMaxInclusive)
    +void evaluate(double score)
}
class Client{}
GradeEvaluator<|--StandardGradeEvaluator
GradeEvaluator<|--GradeEvaluator:nextEvaluator
Client..>GradeEvaluator
@enduml